# wasi-snapshot-preview2-to-preview1-adapter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  compile-wasm.cmake  wasi-sdk-preview2.cmake
.github/workflows/: ci.yml
example_app/: CMakeLists.txt  runtime.c  wasmapp.c
examples/: CMakeLists.txt  clock.c  tcp_client.c  tcp_echo_server.c
mini_wasi_libc/: CMakeLists.txt  mini_wasi_libc.c  mini_wasi_libc.h
runtime/: CMakeLists.txt
wsp2_to_wsp1_adapter/: CMakeLists.txt  adapter.c  allocator.h  badfd.c  clock.c  exit.c  preview2.h  random.c  wsp2_utils.h
wsp2_to_wsp1_adapter/wamr/: CMakeLists.txt  socket.c
